CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(PRINTER)
SET(PACKAGE_NAME "Printer")
SET(PACKAGE_VERSION "0.1")
SET(PACKAGE_STRING "======  ${PACKAGE_NAME}${PACKAGE_VERSION}  ======")
MESSAGE(STATUS "${PACKAGE_STRING}")

ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(lib)

FIND_LIBRARY(ICE_LIB Ice IceUtil)
FIND_PATH(ICE_PATH Ice)
 
IF(NOT ICE_PATH)
  MESSAGE(FATAL_ERROR "** Librería de Ice no encontrada")
ENDIF()


SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "PREFIX ${CMAKE_INSTALL_PREFIX}")


#ADD_CUSTOM_COMMAND (
#  OUTPUT 
#  COMMAND cd slice && make -j5
#)